<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/addPost"
        android:title="@string/add"
        android:icon="@drawable/add_post"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/reel"
        android:title="@string/reel"
        android:icon="@drawable/reels"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"/>
</menu>